--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -16,8 +16,9 @@
             background-color: #f0f0f0;
         }
         #sidebar {
-            width: 200px;
-            background-color: #f1f1f1;
+            width: 250px;
+            background-color: #2c3e50;
+            color: white;
             padding: 20px;
             overflow-y: auto;
         }
@@ -27,42 +28,64 @@
             flex-direction: column;
             background-color: white;
         }
-        #online-users {
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
+        #chat-header {
+            background-color: #3498db;
+            color: white;
+            padding: 15px;
             font-weight: bold;
+            font-size: 18px;
         }
         #chat-messages {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 10px;
+            padding: 20px;
         }
         #chat-form {
             display: flex;
-            padding: 10px;
+            padding: 15px;
             border-top: 1px solid #ccc;
         }
         #message-input {
             flex-grow: 1;
             border: 1px solid #ccc;
-            border-radius: 3px;
-            padding: 5px;
+            border-radius: 20px;
+            padding: 10px;
+            font-size: 14px;
         }
         #send-button {
             margin-left: 10px;
-            background-color: #4CAF50;
+            background-color: #3498db;
             color: white;
             border: none;
-            padding: 5px 10px;
-            border-radius: 3px;
+            padding: 10px 20px;
+            border-radius: 20px;
             cursor: pointer;
+            font-size: 14px;
         }
         .chat-item {
-            padding: 5px;
+            padding: 10px;
             cursor: pointer;
+            border-bottom: 1px solid #34495e;
         }
         .chat-item:hover {
-            background-color: #e0e0e0;
+            background-color: #34495e;
+        }
+        .message {
+            margin-bottom: 10px;
+            padding: 8px 12px;
+            border-radius: 20px;
+            max-width: 70%;
+            word-wrap: break-word;
+        }
+        .sent {
+            background-color: #3498db;
+            color: white;
+            align-self: flex-end;
+            margin-left: auto;
+        }
+        .received {
+            background-color: #ecf0f1;
+            align-self: flex-start;
         }
     </style>
 </head>
@@ -72,7 +95,7 @@
         <div id="chat-list"></div>
     </div>
     <div id="chat-container">
-        <div id="online-users">Usuários online: 0</div>
+        <div id="chat-header">Chat Atendimento</div>
         <div id="chat-messages"></div>
         <form id="chat-form">
             <input type="text" id="message-input" placeholder="Digite sua mensagem...">
@@ -98,97 +121,50 @@
         const chatMessages = document.getElementById('chat-messages');
         const chatForm = document.getElementById('chat-form');
         const messageInput = document.getElementById('message-input');
-        const onlineUsersElement = document.getElementById('online-users');
         const chatList = document.getElementById('chat-list');
 
-        // Gerar um ID único para o usuário
-        const userId = 'user_' + Math.random().toString(36).substr(2, 9);
+        let currentChat = null;
 
-        // Função para adicionar mensagem ao chat
         function addMessageToChat(message) {
             const messageElement = document.createElement('div');
-            messageElement.textContent = `${message.name}: ${message.text}`;
+            messageElement.classList.add('message');
+            messageElement.classList.add(message.sender === 'Atendente' ? 'sent' : 'received');
+            messageElement.textContent = `${message.sender}: ${message.text}`;
             chatMessages.appendChild(messageElement);
             chatMessages.scrollTop = chatMessages.scrollHeight;
         }
 
-        // Listener para novas mensagens no Firebase
         database.ref('messages').on('child_added', (snapshot) => {
             const message = snapshot.val();
-            addMessageToChat(message);
+            if (message.sender !== 'Atendente' && !document.getElementById(message.sender)) {
+                updateChatList(message);
+            }
+            if (currentChat === message.sender || currentChat === null) {
+                addMessageToChat(message);
+            }
             showNotification(message);
-            updateChatList(message);
         });
 
-        // Enviar mensagem
         chatForm.addEventListener('submit', (e) => {
             e.preventDefault();
             const messageText = messageInput.value.trim();
-            if (messageText) {
+            if (messageText && currentChat) {
                 const message = {
-                    name: 'Atendente',
+                    sender: 'Atendente',
                     text: messageText,
-                    timestamp: firebase.database.ServerValue.TIMESTAMP
+                    timestamp: firebase.database.ServerValue.TIMESTAMP,
+                    recipient: currentChat
                 };
                 database.ref('messages').push(message);
                 messageInput.value = '';
             }
         });
 
-        // Atualizar status online
-        const userStatusDatabaseRef = database.ref('/status/' + userId);
-        const isOfflineForDatabase = {
-            state: 'offline',
-            last_changed: firebase.database.ServerValue.TIMESTAMP,
-        };
-        const isOnlineForDatabase = {
-            state: 'online',
-            last_changed: firebase.database.ServerValue.TIMESTAMP,
-        };
-
-        database.ref('.info/connected').on('value', function(snapshot) {
-            if (snapshot.val() == false) {
-                return;
-            };
-
-            userStatusDatabaseRef.onDisconnect().set(isOfflineForDatabase).then(function() {
-                userStatusDatabaseRef.set(isOnlineForDatabase);
-            });
-        });
-
-        // Contar usuários online
-        const connectedRef = database.ref('.info/connected');
-        const onlineUsersRef = database.ref('status');
-
-        connectedRef.on('value', (snap) => {
-            if (snap.val() === true) {
-                onlineUsersRef.once('value').then((snapshot) => {
-                    const count = snapshot.numChildren();
-                    onlineUsersElement.textContent = `Usuários online: ${count}`;
-                });
-            }
-        });
-
-        onlineUsersRef.on('child_added', (snapshot) => {
-            updateOnlineUsers();
-        });
-
-        onlineUsersRef.on('child_removed', (snapshot) => {
-            updateOnlineUsers();
-        });
-
-        function updateOnlineUsers() {
-            onlineUsersRef.once('value').then((snapshot) => {
-                const count = snapshot.numChildren();
-                onlineUsersElement.textContent = `Usuários online: ${count}`;
-            });
-        }
-
-        // Função para mostrar notificação
         function showNotification(message) {
-            if (Notification.permission === "granted") {
+            if (Notification.permission === "granted" && message.sender !== 'Atendente') {
                 const notification = new Notification("Nova mensagem no chat", {
-                    body: `${message.name}: ${message.text}`,
+                    body: `${message.sender}: ${message.text}`,
+                    icon: 'https://example.com/icon.png' // Substitua com o URL do seu ícone
                 });
                 notification.onclick = function() {
                     window.focus();
@@ -203,19 +179,24 @@
             }
         }
 
-        // Solicitar permissão para notificações
         if (Notification.permission !== "granted") {
             Notification.requestPermission();
         }
 
-        // Função para atualizar a lista de chats
         function updateChatList(message) {
             const chatItem = document.createElement('div');
+            chatItem.id = message.sender;
             chatItem.className = 'chat-item';
-            chatItem.textContent = `Chat ${message.name}`;
+            chatItem.textContent = message.sender;
             chatItem.onclick = () => {
+                currentChat = message.sender;
                 chatMessages.innerHTML = '';
-                database.ref('messages').orderByChild('name').equalTo(message.name).once('value', (snapshot) => {
+                database.ref('messages').orderByChild('sender').equalTo(message.sender).once('value', (snapshot) => {
+                    snapshot.forEach((childSnapshot) => {
+                        addMessageToChat(childSnapshot.val());
+                    });
+                });
+                database.ref('messages').orderByChild('recipient').equalTo(message.sender).once('value', (snapshot) => {
                     snapshot.forEach((childSnapshot) => {
                         addMessageToChat(childSnapshot.val());
                     });
