--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -191,9 +191,17 @@
             }
         }
 
-        if (Notification.permission !== "granted") {
-            Notification.requestPermission();
+        function requestNotificationPermission() {
+            if (Notification.permission !== "granted") {
+                Notification.requestPermission().then(permission => {
+                    if (permission === "granted") {
+                        console.log("Permissão de notificação concedida");
+                    }
+                });
+            }
         }
+
+        requestNotificationPermission();
 
         function updateChatList(message) {
             const chatItem = document.createElement('div');
