--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -13,12 +13,10 @@
             padding: 0;
             display: flex;
             height: 100vh;
-            background-color: #f0f0f0;
         }
         #sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
+            width: 200px;
+            background-color: #f0f0f0;
             padding: 20px;
             overflow-y: auto;
         }
@@ -26,75 +24,66 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            background-color: white;
+            border-left: 1px solid #ccc;
         }
         #chat-header {
-            background-color: #3498db;
+            background-color: #4CAF50;
             color: white;
-            padding: 15px;
+            padding: 10px;
+            text-align: center;
             font-weight: bold;
-            font-size: 18px;
         }
         #chat-messages {
             flex-grow: 1;
-            overflow-y: auto;
             padding: 20px;
+            overflow-y: auto;
         }
         #chat-form {
             display: flex;
-            padding: 15px;
-            border-top: 1px solid #ccc;
+            padding: 20px;
         }
         #message-input {
             flex-grow: 1;
-            border: 1px solid #ccc;
-            border-radius: 20px;
             padding: 10px;
-            font-size: 14px;
+            font-size: 16px;
         }
         #send-button {
-            margin-left: 10px;
-            background-color: #3498db;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 20px;
             cursor: pointer;
-            font-size: 14px;
+        }
+        .message {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            max-width: 70%;
+        }
+        .sent {
+            background-color: #e1ffc7;
+            margin-left: auto;
+        }
+        .received {
+            background-color: #f0f0f0;
         }
         .chat-item {
             padding: 10px;
             cursor: pointer;
-            border-bottom: 1px solid #34495e;
+            border-bottom: 1px solid #ccc;
         }
         .chat-item:hover {
-            background-color: #34495e;
-        }
-        .message {
-            margin-bottom: 10px;
-            padding: 8px 12px;
-            border-radius: 20px;
-            max-width: 70%;
-            word-wrap: break-word;
-        }
-        .sent {
-            background-color: #3498db;
-            color: white;
-            align-self: flex-end;
-            margin-left: auto;
-        }
-        .received {
-            background-color: #ecf0f1;
-            align-self: flex-start;
+            background-color: #e0e0e0;
         }
         #clear-all-chats {
             margin-top: 20px;
-            background-color: #e74c3c;
+            padding: 10px;
+            background-color: #f44336;
             color: white;
             border: none;
-            padding: 10px;
-            border-radius: 5px;
             cursor: pointer;
+            width: 100%;
         }
     </style>
 </head>
@@ -156,7 +145,7 @@
             showNotification(message);
         });
 
-        chatForm.addEventListener('submit', (e) => {
+        function sendMessage(e) {
             e.preventDefault();
             const messageText = messageInput.value.trim();
             if (messageText && currentChat) {
@@ -167,8 +156,16 @@
                     recipient: currentChat
                 };
                 database.ref('messages').push(message);
-                addMessageToChat(message);
                 messageInput.value = '';
+            }
+        }
+
+        chatForm.addEventListener('submit', sendMessage);
+
+        messageInput.addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                e.preventDefault();
+                sendMessage(e);
             }
         });
 
