--- a/public/chat.html
+++ b/public/chat.html
@@ -96,6 +96,20 @@
             border-radius: 5px;
             font-size: 14px;
         }
+        #audio-recording {
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            font-size: 18px;
+            padding: 10px;
+            border-radius: 10px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 <body>
@@ -109,6 +123,7 @@
             <button type="button" id="audio-button">Gravar Áudio</button>
         </form>
     </div>
+    <div id="audio-recording">Gravando...</div>
 
     <script>
         // Configuração do Firebase
@@ -130,6 +145,7 @@
         const messageInput = document.getElementById('message-input');
         const nameInput = document.getElementById('name-input');
         const audioButton = document.getElementById('audio-button');
+        const audioRecording = document.getElementById('audio-recording');
 
         let userName = '';
 
@@ -187,7 +203,7 @@
                 alert('Por favor, digite seu nome antes de enviar uma mensagem.');
                 return;
             }
-            if (!mediaRecorder) {
+            if (audioButton.textContent === 'Gravar Áudio') {
                 navigator.mediaDevices.getUserMedia({ audio: true })
                     .then(stream => {
                         mediaRecorder = new MediaRecorder(stream);
@@ -206,17 +222,17 @@
                                 audioChunks = [];
                             }
                         };
+                        mediaRecorder.start();
+                        audioRecording.style.display = 'flex';
+                        audioButton.textContent = 'Parar Gravação';
                     })
                     .catch(error => {
                         console.error('Erro ao acessar o microfone:', error);
                     });
-            }
-            if (mediaRecorder.state === 'recording') {
+            } else if (audioButton.textContent === 'Parar Gravação') {
                 mediaRecorder.stop();
+                audioRecording.style.display = 'none';
                 audioButton.textContent = 'Gravar Áudio';
-            } else {
-                mediaRecorder.start();
-                audioButton.textContent = 'Parar Gravação';
             }
         });
     </script>
