--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
     <title>Chat Motoboy</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -140,6 +141,7 @@
         firebase.initializeApp(firebaseConfig);
 
         const database = firebase.database();
+        const storage = firebase.storage();
         const chatMessages = document.getElementById('chat-messages');
         const chatForm = document.getElementById('chat-form');
         const messageInput = document.getElementById('message-input');
@@ -211,14 +213,18 @@
                             audioChunks.push(e.data);
                             if (mediaRecorder.state === 'inactive') {
                                 let blob = new Blob(audioChunks, { type: 'audio/webm' });
-                                let audioURL = URL.createObjectURL(blob);
-                                const message = {
-                                    sender: userName,
-                                    text: audioURL,
-                                    type: 'audio',
-                                    timestamp: firebase.database.ServerValue.TIMESTAMP
-                                };
-                                database.ref('messages').push(message);
+                                const storageRef = storage.ref('audio/' + Date.now() + '.webm');
+                                storageRef.put(blob).then(snapshot => {
+                                    snapshot.ref.getDownloadURL().then(downloadURL => {
+                                        const message = {
+                                            sender: userName,
+                                            text: downloadURL,
+                                            type: 'audio',
+                                            timestamp: firebase.database.ServerValue.TIMESTAMP
+                                        };
+                                        database.ref('messages').push(message);
+                                    });
+                                });
                                 audioChunks = [];
                             }
                         };
